--- a/frontend-demo/style.css
+++ b/frontend-demo/style.css
@@ -93,6 +93,9 @@ input[type="submit"] { /* attribute selector */
     border-radius: 10px;
     font-weight: bold;
 }
+#album #photo{
+    width: 400px;
+}
 /* style footer area */
 footer {
     height: 40px;
