--- a/homework-module-1/styles.css
+++ b/homework-module-1/styles.css
@@ -342,3 +342,19 @@ select {
     align-items: center;
     margin: 0 auto;
 }
+/*Timeclock*/
+#timeofday{
+    height: 60px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background:linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
+    color:#125688
+}
+#timeofday span:first-child{
+    color:#3a3a3a
+}
+#clock{
+    margin-left:10px;
+}
